--- a/symbaroum5ecore/symbaroum5ecore/templates/actors/syb5e-character-sheet.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/actors/syb5e-character-sheet.html
@@ -258,7 +258,10 @@
 
         {{!-- Spellbook Tab --}}
         <div class="tab spellbook flexcol" data-group="primary" data-tab="spellbook">
-            {{> "systems/dnd5e/templates/actors/parts/actor-spellbook.html"}}
+          {{!-- Maximum Spell Level Display --}}
+          {{> "modules/symbaroum5ecore/templates/actors/parts/character-max-spell.html"}}
+
+          {{> "systems/dnd5e/templates/actors/parts/actor-spellbook.html"}}
         </div>
 
         {{!-- Effects Tab --}}
