--- a/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/character-max-spell.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/character-max-spell.html
@@ -1,4 +1,4 @@
-{{#if maxSpellLevel}}
+{{#if maxSpellLevel.level}}
 <div class="inventory-filters spellbook-filters flexrow" style="justify-content:flex-start;">
   <div class="form-group spellcasting-ability" >
     <label>{{localize "SYB5E.MaxSpell"}}: </label>
