--- a/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/actor-corruption.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/actor-corruption.html
@@ -1,31 +1,31 @@
 {{!-- TODO cement CSS --}}
 <ul class="attributes flexrow">
   <li class="attribute resource" style="height:auto;">
-    <h4 class="attribute-name box-title">{{ localize "SYB5E.Corruption"}}</h4>
+    <h4 class="attribute-name box-title">{{ localize "SYB5E.Corruption.Label"}}</h4>
     <div class="attribute-value" style="height:auto;">
       {{#if isCharacter}}
       <label class="flexcol">
         <input type="number" name="{{sybPaths.corruption.temp}}" value="{{data.attributes.corruption.temp}}" />
-        <span class="attribute-footer">{{ localize "DND5E.Temp"}}</span>
+        <span class="attribute-footer">{{ localize "SYB5E.Corruption.Temporary"}}</span>
       </label>
       <span> + </span>
       {{/if}}
       <label class="flexcol">
         <input type="number"  name="{{sybPaths.corruption.permanent}}" value="{{data.attributes.corruption.permanent}}" />
-        <span class="attribute-footer">{{ localize "SYB5E.Permanent"}}</span>
+        <span class="attribute-footer">{{ localize "SYB5E.Corruption.Permanent"}}</span>
       </label>
       {{#if isCharacter}}
       <span> = </span>
       <label class="flexcol">
         <input type="number" name="{{sybPaths.corruption.value}}" value="{{data.attributes.corruption.value}}" disabled />
-        <span class="attribute-footer">{{ localize "SYB5E.Current"}}</span>
+        <span class="attribute-footer">{{ localize "SYB5E.Corruption.Current"}}</span>
       </label>
       {{/if}}
       <span> / </span>
       <label class="flexcol">
         <input type="number"  name="{{sybPaths.corruption.max}}" value="{{data.attributes.corruption.max}}" />
 
-        <span class="attribute-footer">{{ localize "SYB5E.Threshold"}}</span>
+        <span class="attribute-footer">{{ localize "SYB5E.Corruption.Threshold"}}</span>
       </label>
     </div>
   </li>
