--- a/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/actor-shadow.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/actor-shadow.html
@@ -2,13 +2,13 @@
 {{#if isNPC}}
 <ul class="attributes characteristics flexrow">
   <li class="flexcol">
-    <h4 class="attribute-name box-title">{{ localize "SYB5E.Manner" }}</h4>
+    <h4 class="attribute-name box-title">{{ localize "SYB5E.Manner.Label" }}</h4>
     <textarea name="{{sybPaths.manner}}">{{data.details.manner}}</textarea>
   </li>
   <li class="flexcol">
-    <h4 class="attribute-name box-title">{{ localize "SYB5E.Shadow" }}</h4>
+    <h4 class="attribute-name box-title">{{ localize "SYB5E.Shadow.Label" }}</h4>
     {{else}}
-    <label>{{ localize "SYB5E.Shadow" }}</label>
+    <label>{{ localize "SYB5E.Shadow.Label" }}</label>
     {{/if}}
     <textarea name="{{sybPaths.shadow}}">{{data.details.shadow}}</textarea>
     {{#if isNPC}}
