--- a/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/character-max-spell.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/actors/parts/character-max-spell.html
@@ -1,6 +1,6 @@
 <div class="inventory-filters spellbook-filters flexrow" style="justify-content:flex-start;">
   <div class="form-group spellcasting-ability" >
-    <label>{{localize "SYB5E.MaxSpell"}}: </label>
+    <label>{{localize "SYB5E.Spell.MaxLevel"}}: </label>
     <label style="padding-left:5px;">{{localize maxSpellLevel.label}}</label>
   </div>
 </div>
