SYB5E-18 item props (#10)
* weapon/armor properties implemented.

* version bump to v9

* alchemical weapons/proficiency implemented

--- a/symbaroum5ecore/symbaroum5ecore/templates/items/parts/spell-favored.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/items/parts/spell-favored.html
@@ -1,4 +1,4 @@
 <label class="checkbox prepared">
-  {{localize "SYB5E.Favored"}}
+  {{localize "SYB5E.Spell.Favored"}}
   <input type="checkbox" name="{{favoredPath}}" {{checked isFavored}}/>
 </label>
