--- a/symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
+++ b/symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
@@ -100,13 +100,45 @@
   box-shadow: 0 0 8px hsl(0, 0%, 50%);
 }
 
-.symbaroum-dnd5e-mod .entity-link-I {
+.symbaroum-dnd5e-mod .content-link {
   color: hsl(39, 77%, 83%);
   background: transparent;
   font-size: 15pt;
   border: 0;
 }
 
+.symbaroum-dnd5e-mod .inline-link .content-link {
+  background-color: transparent;
+  color: hsl(0, 0%, 0%);
+  font-size: 12pt;
+  border: 0;
+  font-family: 'Fondamento';
+}
+
+.symbaroum-dnd5e-mod .inline-link2 .content-link {
+  background-color: transparent;
+  color: hsl(6, 56%, 30%);
+  font-size: 16pt;
+  border: 0;
+  font-family: 'Fondamento';
+}
+
+.symbaroum-dnd5e-mod .noSpellLink {
+  background-color: transparent;
+  color: hsl(6, 56%, 30%);
+  font-size: 16pt;
+  border: 0;
+  font-family: 'Fondamento';
+}
+
+.symbaroum-dnd5e-mod h2 .content-link {
+  background-color: hsl(6, 56%, 30%);
+  color: hsl(130, 65%, 51%);
+  font-size: 12pt;
+  border: 0;
+  /* font-family: 'Fondamento'; */
+  font-family: 'Primitive';
+}
 .symbaroum-dnd5e-mod p {
   background: transparent;
   font-size: 12pt;
@@ -226,7 +258,7 @@
 th,
 td {
   height: 36px;
-  /* width: 80%; */
+  width: 80%;
   /* border-style: double;
   border-color: greenyellow; */
   margin-left: auto;
@@ -274,7 +306,7 @@ td {
 .symbaroum-dnd5e-mod .tdstyle2D {
   width: 50%;
   height: 18px;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .symbaroum-dnd5e-mod .blockquoteright {
