origin/approach renames. working on fixing the sheet's slot display issue for half-casters

--- a/symbaroum5ecore/symbaroum5ecore/templates/actors/syb5e-character-sheet.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/actors/syb5e-character-sheet.html
@@ -32,7 +32,7 @@
             {{!-- Character Summary --}}
             <ul class="summary flexrow">
                 <li>
-                    <input type="text" name="data.details.race" value="{{data.details.race}}" placeholder="{{ localize 'DND5E.Race' }}"/>
+                    <input type="text" name="data.details.race" value="{{data.details.race}}" placeholder="{{ localize 'SYB5E.Sheet.Origin' }}"/>
                 </li>
                 <li>
                     <input type="text" name="data.details.background" value="{{data.details.background}}" placeholder="{{ localize 'DND5E.Background' }}"/>
