Favored is now tri-state. Yes, No, Never

--- a/symbaroum5ecore/symbaroum5ecore/templates/items/parts/spell-favored.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/items/parts/spell-favored.html
@@ -1,4 +1,6 @@
 <label class="checkbox prepared">
   {{localize "SYB5E.Spell.Favored"}}
-  <input type="checkbox" name="{{favoredPath}}" {{checked isFavored}}/>
+  <select class="prepared" name="{{favoredPath}}">
+    {{selectOptions favoredStates selected=favoredValue inverted=true}}
+  </select>
 </label>
