--- a/symbaroum5ecore/symbaroum5ecore/templates/items/parts/spell-favored.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/items/parts/spell-favored.html
@@ -1,6 +1,6 @@
 <label class="checkbox prepared">
   {{localize "SYB5E.Spell.Favored"}}
-  <select class="prepared" name="{{favoredPath}}">
+  <select class="prepared" name="{{favoredPath}}" {{edit}}>
     {{selectOptions favoredStates selected=favoredValue inverted=true}}
   </select>
 </label>
