--- a/symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
+++ b/symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
@@ -38,7 +38,8 @@
   --syb5e-npc-background-image: url(../images/background/bg-red.webp) repeat;
   --syb5e-npc-font: 'Fondamento';
   --syb5e-npc-border-image: url(../images/journal/sym-journal-header.webp);
-  --syb5e-sheet-border: 13px solid transparent;
+  --syb5e-pc-sheet-border: 13px solid transparent;
+  --syb5e-npc-sheet-border: 13px solid transparent;
 }
 
 /* End of Global Variables */
@@ -64,7 +65,7 @@
 
 .app.window-app.syb5e.actor.character.sheet {
   /* background: chartreuse; */
-  border: var(--syb5e-sheet-border);
+  border: var(--syb5e-pc-sheet-border);
   border-image: var(--syb5e-pc-border-image);
   border-image-slice: 50%;
   border-image-width: 100%;
@@ -232,7 +233,7 @@
 /* ************************ */
 .app.window-app.syb5e.actor.npc.sheet {
   /* background: chartreuse; */
-  border: var(--syb5e-sheet-border);
+  border: var(--syb5e-npc-sheet-border);
   border-image: var(--syb5e-npc-border-image);
   border-image-slice: 50%;
   border-image-width: 100%;
