--- a/symbaroum5ecore/symbaroum5ecore/templates/apps/config-app.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/apps/config-app.html
@@ -9,6 +9,7 @@
                 <option value="url(../images/background/bg-red.webp) repeat">Red Image</option>
                 <option value="url(../images/background/dark_green_gold.webp) repeat">Ashe Sample</option>
                 <option value="none">{{localize 'SYB5E.setting.config-color-picker.name'}}</option>
+                <option value="#dad8cc">DnD5E Default</option>
             </select>
         </div>
 
@@ -37,6 +38,7 @@
                 <option value="url(../images/background/bg-yellow.webp) repeat">Yellow Image</option>
                 <option value="url(../images/background/dark_green_gold.webp) repeat">Ashe Sample</option>
                 <option value="none">{{localize 'SYB5E.setting.config-color-picker.name'}}</option>
+                <option value="#dad8cc">DnD5E Default</option>
             </select>
 
         </div>
