Sheet Config options working for all use cases (#22)
* Actor background and Text Colour selection complete.

* Removed border for default DnD5e sheet config.

* Sheet Config finally woking for all use cases.

--- a/symbaroum5ecore/symbaroum5ecore/templates/apps/config-app.html
+++ b/symbaroum5ecore/symbaroum5ecore/templates/apps/config-app.html
@@ -1,74 +1,76 @@
 <form autocomplete="off">
     <div class="tab-active">
         <div class="form-group">
-            <label for="charBGImage">{{localize 'SYB5E.OPTIONAL_PC_CHAR_BG_IMGS'}}</label>
+            <label for="charBGImage">{{localize 'SYB5E.setting.config-pc-char-bg-img.name'}}</label>
             <select name="charBGImage" id="charBGImage">
-                <option value="url(../images/background/bg-green.webp repeat">Green Image</option>
-                <option value="url(../asset/image/background/blue_square_light.webp) repeat">Light Blue Squares Image</option>
-                <option value="url(../asset/image/background/brown_dark.webp) repeat">Dark Brown Image</option>
-                <option value="url(../asset/image/background/brown_square_dark.webp) repeat">Dark Brown Square Image</option>
-                <option value="url(../asset/image/background/green_flower_dark.webp) repeat">Dark Green Flower Image</option>
-                <option value="url(../asset/image/background/green_flower_light.webp) repeat">Light Green Flower Image</option>
-                <option value="url(../asset/image/background/green_flower.webp) repeat">Green Flower Image</option>
-                <option value="url(../asset/image/background/green_gold_dark.webp) repeat">Green and Gold Dark Image</option>
-                <option value="url(../asset/image/background/orange_light.webp) repeat">Light Orange Image</option>
-                <option value="url(../asset/image/background/purple_flower_light.webp) repeat">Light Purple Flower Image</option>
-                <option value="url(../asset/image/background/red_compass_light.webp) repeat">Light Red Compass Image</option>
-                <option value="url(../asset/image/background/red_flower_light.webp) repeat">Light Red Flower Image</option>
-                <option value="url(../asset/image/background/red_square_light.webp) repeat">Light Red Square Image</option>
-                <option value="url(../asset/image/background/green-scales.webp) repeat">Green Scales Image</option>
-                <option value="none">{{localize 'SYB5E.OPTIONAL_COLOR_PICKER'}}</option>
+                <option value="url(../images/background/bg-green.webp) repeat">Green Image</option>
+                <option value="url(../images/background/bg-brown.webp) repeat">Dark Brown Image</option>
+                <option value="url(../images/background/bg-yellow.webp) repeat">Yellow Image</option>
+                <option value="url(../images/background/bg-red.webp) repeat">Red Image</option>
+                <option value="url(../images/background/dark_green_gold.webp) repeat">Ashe Sample</option>
+                <option value="none">{{localize 'SYB5E.setting.config-color-picker.name'}}</option>
+                <option value="#dad8cc">DnD5E Default</option>
             </select>
         </div>
 
         <div style="display:none" id="pcColPanel">
             <input type="hidden" name="charBGColour" value="{{charBGColour}}" id="charBGColour" data-dtype="String" />
-            <label for="pcColPanel-ColourSelector">{{localize 'SYB5E.OPTIONAL_PC_COLOUR_SELECTOR'}}</label>
+            <label for="pcColPanel-ColourSelector">{{localize 'SYB5E.setting.config-pc-color-selector.name'}}</label>
             <input id="pcColPanel-ColourSelector" type="color" name="ColourSelector" value="{{charBGColour}}" data-edit="charBGColour" />
         </div>
 
         <hr>
+        <div id="pcTextColPanel">
+            <input type="hidden" name="charTextColour" value="{{charTextColour}}" id="charTextColour" data-dtype="String" />
+            <label for="pcTextColPanel-ColourSelector">{{localize 'SYB5E.setting.config-pc-text-selector.name'}}</label>
+            <input id="pcTextColPanel-ColourSelector" type="color" name="ColourSelector" value="{{charTextColour}}" data-edit="charTextColour" />
+        </div>
+
+        <hr>
+
 
         <div class="form-group">
-            <label for="npcBGImage">{{localize 'SYB5E.OPTIONAL_NPC_CHAR_BG_IMGS'}}</label>
+            <label for="npcBGImage">{{localize 'SYB5E.setting.config-npc-char-bg-img.name'}}</label>
             <select name="npcBGImage" id="npcBGImage">
-                <option value="url(../images/background/bg-red.webp repeat">Red Image</option>
-                <option value="url(../asset/image/background/blue_square_light.webp) repeat">Light Blue Squares Image</option>
-                <option value="url(../asset/image/background/brown_dark.webp) repeat">Dark Brown Image</option>
-                <option value="url(../asset/image/background/brown_square_dark.webp) repeat">Dark Brown Square Image</option>
-                <option value="url(../asset/image/background/green_flower_dark.webp) repeat">Dark Green Flower Image</option>
-                <option value="url(../asset/image/background/green_flower_light.webp) repeat">Light Green Flower Image</option>
-                <option value="url(../asset/image/background/green_flower.webp) repeat">Green Flower Image</option>
-                <option value="url(../asset/image/background/green_gold_dark.webp) repeat">Green and Gold Dark Image</option>
-                <option value="url(../asset/image/background/orange_light.webp) repeat">Light Orange Image</option>
-                <option value="url(../asset/image/background/purple_flower_light.webp) repeat">Light Purple Flower Image</option>
-                <option value="url(../asset/image/background/red_compass_light.webp) repeat">Light Red Compass Image</option>
-                <option value="url(../asset/image/background/red_flower_light.webp) repeat">Light Red Flower Image</option>
-                <option value="url(../asset/image/background/red_square_light.webp) repeat">Light Red Square Image</option>
-                <option value="url(../asset/image/background/green-scales.webp) repeat">Green Scales Image</option>
-                <option value="none">{{localize 'SYB5E.OPTIONAL_COLOR_PICKER'}}</option>
+                <option value="url(../images/background/bg-red.webp) repeat">Red Image</option>
+                <option value="url(../images/background/bg-green.webp) repeat">Green Image</option>
+                <option value="url(../images/background/bg-brown.webp) repeat">Dark Brown Image</option>
+                <option value="url(../images/background/bg-yellow.webp) repeat">Yellow Image</option>
+                <option value="url(../images/background/dark_green_gold.webp) repeat">Ashe Sample</option>
+                <option value="none">{{localize 'SYB5E.setting.config-color-picker.name'}}</option>
+                <option value="#dad8cc">DnD5E Default</option>
             </select>
 
         </div>
 
         <div style="display:none" id="npcColPanel">
             <input type="hidden" name="npcBGColour" value="{{npcBGColour}}" id="npcBGColour" data-dtype="String" />
-            <label for="npcColPanel-ColourSelector">{{localize "SYB5E.OPTIONAL_NPC_COLOUR_SELECTOR"}}</label>
+            <label for="npcColPanel-ColourSelector">{{localize "SYB5E.setting.config-npc-color-selector.name"}}</label>
             <input id="npcColPanel-ColourSelector" type="color" name="ColourSelector" value="{{npcBGColour}}" data-edit="npcBGColour" />
         </div>
 
         <hr>
+        <div id="npcTextColPanel">
+            <input type="hidden" name="npcTextColour" value="{{npcTextColour}}" id="npcTextColour" data-dtype="String" />
+            <label for="npcTextColPanel-ColourSelector">{{localize 'SYB5E.setting.config-npc-text-selector.name'}}</label>
+            <input id="npcTextColPanel-ColourSelector" type="color" name="ColourSelector" value="{{npcTextColour}}" data-edit="npcTextColour" />
+        </div>
 
-        <p><i style="font-size: smaller">{{localize "SYB5E.OPTIONAL_RESET_NOTE"}}</i></p>
+        <hr>
+
+        <p><i style="font-size: smaller">{{localize "SYB5E.setting.config-reset-note.name"}}</i></p>
 
         <div class="form-group buttons-save">
-            <button type="submit" name="submit"><b>{{localize "SYB5E.OPTIONAL_SUBMIT_BUTTON"}}</b></button>
-        </div>
-        <div class="form-group">
-            <button type="button" name="resetPC"><b>{{localize "SYB5E.OPTIONAL_RESET_PC_BUTTON"}}</b></button>
-            <button type="button" name="resetNPC"><b>{{localize "SYB5E.OPTIONAL_RESET_NPC_BUTTON"}}</b></button>
+            <button type="submit" name="submit"><b>{{localize "SYB5E.setting.config-submit-button.name"}}</b></button>
         </div>
         <div class="form-group ">
-            <button type="button" name="resetAll"><b>{{localize "SYB5E.OPTIONAL_RESET_ALL_BUTTON"}}</b></button>
+            <button type="button" name="dnd5eSettings"><b>{{localize "SYB5E.setting.config-default-dnd5e.name"}}</b></button>
+        </div>
+        <div class="form-group">
+            <button type="button" name="resetPC"><b>{{localize "SYB5E.setting.config-reset-pc-config.name"}}</b></button>
+            <button type="button" name="resetNPC"><b>{{localize "SYB5E.setting.config-reset-npc-config.name"}}</b></button>
+        </div>
+        <div class="form-group ">
+            <button type="button" name="resetAll"><b>{{localize "SYB5E.setting.config-reset-all-button.name"}}</b></button>
         </div>
 </form>
