--- a/symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
+++ b/symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
@@ -27,18 +27,20 @@
 }
 
 /* Global Variables */
-/* :root {
-  --syb5e-pc-color: white;
+:root {
+  --syb5e-pc-color: #ffffff;
   --syb5e-pc-background: none;
   --syb5e-pc-background-image: url(../images/background/bg-green.webp) repeat;
   --syb5e-pc-font: 'Fondamento';
   --syb5e-pc-border-image: url(../images/journal/sym-journal-border.webp);
-  --syb5e-npc-color: white;
+  --syb5e-npc-color: #ffffff;
   --syb5e-npc-background: none;
   --syb5e-npc-background-image: url(../images/background/bg-red.webp) repeat;
   --syb5e-npc-font: 'Fondamento';
   --syb5e-npc-border-image: url(../images/journal/sym-journal-header.webp);
-} */
+  --syb5e-pc-sheet-border: 13px solid transparent;
+  --syb5e-npc-sheet-border: 13px solid transparent;
+}
 
 /* End of Global Variables */
 /* ************************ */
@@ -63,7 +65,7 @@
 
 .app.window-app.syb5e.actor.character.sheet {
   /* background: chartreuse; */
-  border: 13px solid transparent;
+  border: var(--syb5e-pc-sheet-border);
   border-image: var(--syb5e-pc-border-image);
   border-image-slice: 50%;
   border-image-width: 100%;
@@ -231,7 +233,7 @@
 /* ************************ */
 .app.window-app.syb5e.actor.npc.sheet {
   /* background: chartreuse; */
-  border: 13px solid transparent;
+  border: var(--syb5e-npc-sheet-border);
   border-image: var(--syb5e-npc-border-image);
   border-image-slice: 50%;
   border-image-width: 100%;
