--- a/templates/apps/config-app.html
+++ b/templates/apps/config-app.html
@@ -3,10 +3,11 @@
         <div class="form-group">
             <label for="charBGImage">{{localize 'SYB5E.setting.config-pc-char-bg-img.name'}}</label>
             <select name="charBGImage" id="charBGImage">
+                <option value="url(../images/background/bg-paper.webp) repeat">Paper Image</option>
                 <option value="url(../images/background/bg-green.webp) repeat">Green Image</option>
                 <option value="url(../images/background/bg-brown.webp) repeat">Dark Brown Image</option>
-                <option value="url(../images/background/bg-yellow.webp) repeat">Yellow Image</option>
-                <option value="url(../images/background/bg-red.webp) repeat">Red Image</option>
+                <option value="url(../images/background/bg-light-brown.webp) repeat">Light Brown Image</option>
+                <option value="url(../images/background/bg-black.webp) repeat">Black Image</option>
                 <option value="none">{{localize 'SYB5E.setting.config-color-picker.name'}}</option>
                 <option value="#dad8cc">DnD5E Default</option>
             </select>
@@ -31,10 +32,11 @@
         <div class="form-group">
             <label for="npcBGImage">{{localize 'SYB5E.setting.config-npc-char-bg-img.name'}}</label>
             <select name="npcBGImage" id="npcBGImage">
-                <option value="url(../images/background/bg-red.webp) repeat">Red Image</option>
+                <option value="url(../images/background/bg-paper.webp) repeat">Paper Image</option>
                 <option value="url(../images/background/bg-green.webp) repeat">Green Image</option>
                 <option value="url(../images/background/bg-brown.webp) repeat">Dark Brown Image</option>
-                <option value="url(../images/background/bg-yellow.webp) repeat">Yellow Image</option>
+                <option value="url(../images/background/bg-light-brown.webp) repeat">Light Brown Image</option>
+                <option value="url(../images/background/bg-black.webp) repeat">Black Image</option>
                 <option value="none">{{localize 'SYB5E.setting.config-color-picker.name'}}</option>
                 <option value="#dad8cc">DnD5E Default</option>
             </select>
