Closes #2. Actor's can be marked 'thoroughly corrupt'. Also suppresses numerical display of corruption, though it is still tracked in the background.

--- a/templates/actors/parts/actor-corruption.html
+++ b/templates/actors/parts/actor-corruption.html
@@ -9,6 +9,7 @@
         </select>
       </div>
     </div>
+    {{#unless corruptionAbilities.thorough }}
     <div class="attribute-value" style="height:auto;">
       {{#if isCharacter}}
       <label class="flexcol">
@@ -35,5 +36,6 @@
         <span class="attribute-footer">{{ localize "SYB5E.Corruption.Threshold"}}</span>
       </label>
     </div>
+    {{/unless}}
   </li>
 </ul>
